k8s/deploy-ingress.yaml
# Ingress is not needed if the frontend is configured as LoadBalancer.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hellomicroservices
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
